# imagica-voice-agent

./: .gitignore  CLAUDE.md  ELEVENLABS_VOICE_AGENT_GUIDE.md  README.md  SESSION_CONTEXT.md  VOICE_MODEL_STUDY.md  agent.py  concurrent_test.py  devx-doctrine (2).md  elevenlabs_server.py  implementation_plan.md  kaya_branches.py  kaya_knowledge_base.txt  kaya_prompt.py  load_test.py  log_setup.py  main.py  mock_data.py  post_call.db  post_call.py  pyproject.toml  requirements.txt  retry.py  sms.py  test_elevenlabs.py  test_gemini_live.py  voice_agent.py  working.md
benchmark/: README.md  audio_corpus.py  export_gold_templates.py  judge.py  report.py  runner.py  scorers.py  sim_user.py  verify_pipeline.py
benchmark/gold/: gold_00042.json  gold_00043.json  gold_00044.json  gold_00045.json  gold_00046.json  gold_00047.json  gold_00048.json  gold_00051.json  gold_00054.json  gold_00063.json  gold_00065.json  gold_00067.json  gold_00070.json  gold_00072.json  gold_00073.json  gold_00076.json  gold_00077.json  gold_00078.json  gold_00081.json  gold_00082.json  gold_00083.json  gold_00091.json  gold_00094.json  gold_00095.json  gold_00096.json  (+5 more)
custom_LLM/: claude_proxy_server.py
docs/: ELEVENLABS_VOICE_AGENT_GUIDE.md  system_prompt.md  working.md
scripts/: concurrent_test.py  load_test.py
src/: __init__.py  config.py  constants.py  logging_setup.py  main.py  mock_data.py  models.py  queue_worker.py
tests/: conftest.py  test_api.py  test_constants.py  test_queue_worker.py
web/: dashboard.html  kaya_appointments.html  kaya_demo.html  kaya_transcripts.html
(+65 files in other folders)
